--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -35,15 +35,29 @@
   
   .about h3 {
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 70px;
+    font-size: 60px;
     color: #d8cd80;
-    height: 20px;
+    height: 60px;
     text-shadow: 2px 2px rgb(255, 255, 255);
+    padding: 0;
+    margin: 0px;
+    margin-bottom: 2vh;
+  }
+
+  .prompt{
+    position: flex;
+  }
+
+  .prompt p{
+    margin-top: 2vh;
+    margin-bottom: 2vh;
+    font-size: 25px;
   }
 
   .prompt h4{
     padding-top: 5px;
     text-shadow: 0px, 0px;
+    margin: 0px;
   }
   
   .about .prompt {
@@ -181,8 +195,9 @@
   
   @media only screen and (max-width: 900px) {
     .about {
+      padding-top: 5vh;
       width: 100%;
-      height: calc(100vh - 100px);
+      height: auto;
       position: relative;
     }
     .skills {
@@ -194,20 +209,32 @@
     }
     
     .about h3 {
-      font-size: 60px;
+      font-size: 45px;
       color: #d8cd80;
     }
   
     .about .prompt {
       margin-top: 5px;
-      font-size: 24px;
-      width: 80%;
+      font-size: 20px;
+      width: 90%;
     }
-  
-    .list {
+
+
+
+    .skills .list {
+      margin: 0px;
+      margin-bottom: 2vh;
       padding: 0;
+      list-style: none;
+      width: 90%;
+      size: 40px;
+      justify-content: left;
+      align-items: left;
     }
-  
+
+    .skills h1{
+      font-size: 45px;
+    }
     .skills h3 {
       color: #28375e;
       font-size: 35px;
