--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -8,9 +8,37 @@
     z-index: 1;
 
   }
-  
 
-  .links {
+  .left {
+    float: left;
+    width: 20%;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    color: white;
+  }
+
+  .middle {
+    float: left;
+    width: 60%;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+  }
+
+  /*
+
+    .left {
+    width: 100%;
+    height: 100px;
+    display: flex;
+    align-items: center;
+
+  }
+    .middle {
     width: 100%;
     height: 100%;
     display: flex;
@@ -20,10 +48,23 @@
 
   }
 
-  .links .link{
+    .middle .link{
     padding-left: 5px;
     padding-right: 5px;
     font-weight: bold;
+    text-shadow: 1px 1px rgb(162, 186, 238);
+  }
+  */
+
+
+
+  .middle .link{
+    float: left;
+    padding: 10px;
+    width: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     text-shadow: 1px 1px rgb(162, 186, 238);
   }
   
@@ -33,20 +74,47 @@
     margin: 20px;
     font-size: 25px;
   }
+
+
   
-  .toggleButton {
+  .left svg {
+    font-size: 50px;
+  }
+  
+  .left button {
+    margin-right: 20px;
+    background-color: transparent;
+    border: none;
+    color: white;
+    cursor: pointer;
+  }
+  
+/*  right  
+
+  .right {
     width: 100%;
     height: 100px;
     display: flex;
     align-items: center;
     justify-content: flex-end;
   }
+
+*/
+
+.right {
+  float: left;
+  width: 18%;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
   
-  .toggleButton svg {
+  .right svg {
     font-size: 50px;
   }
   
-  .toggleButton button {
+  .right button {
     margin-right: 20px;
     background-color: transparent;
     border: none;
@@ -58,7 +126,7 @@
     height: 100vh;
   }
   
-  #open .links {
+  #open .middle {
     flex-direction: column;
     justify-content: flex-start;
     margin-top: 100px;
@@ -81,7 +149,7 @@
   }
   
   @media only screen and (max-width: 600px) {
-    .toggleButton {
+    .right {
       display: flex;
     }
     #close a {
@@ -95,7 +163,7 @@
   }
   
   @media only screen and (min-width: 600px) {
-    .toggleButton {
+    .right {
       display: none;
     }
   
@@ -107,7 +175,7 @@
       height: 100px;
     }
   
-    #open .links {
+    #open .middle {
       flex-direction: row;
     }
   }
